--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Offers a way to modularize your tasks",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "coverage": "istanbul cover _mocha",
-    "codeclimate": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/codeclimate && rm -rf ./coverage"
+    "jshint": "jshint --reporter node_modules/jshint-stylish/stylish.js index.js",
+    "check-cov": "istanbul check-coverage --statements 100 --functions 100 --branches 100 --lines 100",
+    "test": "istanbul cover _mocha",
+    "posttest": " npm run check-cov; npm run jshint;",
+    "codeclimate": "cat ./coverage/lcov.info | codeclimate"
   },
   "repository": {
     "type": "git",
@@ -27,11 +29,13 @@
     "expect.js": "^0.3.1",
     "gulp": "^3.8.10",
     "istanbul": "^0.3.5",
-    "mocha": "^2.0.1",
+    "jshint": "^2.6.0",
+    "jshint-stylish": "^1.0.0",
+    "mocha": "^2.1.0",
     "mocha-lcov-reporter": "0.0.1"
   },
   "dependencies": {
     "defaults": "^1.0.0",
-    "glob": "^4.3.1"
+    "glob": "^4.3.5"
   }
 }
